improved samples